--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ html {
 
 .container {
   display: grid;
-  width: 100vw;
-  height: 100vh;
-  grid-template-rows: 50px auto 50px;
+  width: 90vw;
+  height: 90vh;
+  margin: 0 auto;
+  grid-template-rows: 20px auto 20px;
 }
 
 .topplayer {
@@ -28,7 +29,7 @@ html {
 
 .ball {
   backround-color: black;
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   position: relative;
 }
