--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
 }
 
 .ball {
-  backround-color: black;
+  background-color: black;
   width: 10px;
   height: 10px;
   position: relative;
